<resources>
    <string name="app_name">My First App</string>
    <string name="button_send">Invia</string>
    <string name="edit_nome">Inserisci un nome</string>
    <string name="edit_cognome">Inserisci un cognome</string>
    <string name="edit_telefono">Inserisci un telefono</string>
    <string name="text_welcome">Benvenuto nella mia app</string>
    <string name="missing_nome">Non hai inserito il nome</string>
    <string name="missing_cognome">Non hai inserito il cognome</string>
    <string name="missing_telefono">Non hai inserito il telefono</string>
</resources>
