<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myfirstapp.UI.DisplayMessageActivity">

    <TextView
        android:id="@+id/nome"
        android:layout_width="167dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/missing_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benvenuto" />

    <TextView
        android:id="@+id/cognome"
        android:layout_width="171dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/missing_cognome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <TextView
        android:id="@+id/telefono"
        android:layout_width="171dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:hint="@string/missing_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cognome" />

    <TextView
        android:id="@+id/benvenuto"
        android:layout_width="199dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_welcome"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>
